--- a/Project.toml
+++ b/Project.toml
@@ -14,9 +14,18 @@ Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
+CSV = "0.10"
+Comonicon = "1.0"
+DataFrames = "1.6"
+HiGHS = "1.7"
+Ipopt = "1.5"
+JuMP = "1.17"
+Juniper = "0.9"
+OrderedCollections = "1.6"
+Reexport = "1"
+StatsBase = "0.34"
 julia = "1.9"
 
 [extras]
