--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
+Aqua = "0.8"
 CSV = "0.10"
 Comonicon = "1.0"
 DataFrames = "1.6"
@@ -26,6 +27,7 @@ Juniper = "0.9"
 OrderedCollections = "1.6"
 Reexport = "1"
 StatsBase = "0.34"
+Suppressor = "0.2"
 julia = "1.9"
 
 [extras]
