--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,10 @@ OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
+[weakdeps]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
+
 [compat]
 Aqua = "0.8"
 CSV = "0.10"
