--- a/Project.toml
+++ b/Project.toml
@@ -11,9 +11,12 @@ HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
+Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
+XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
 CSV = "0.10"
@@ -23,7 +26,10 @@ HiGHS = "1.7"
 Ipopt = "1.5"
 JuMP = "1.17"
 Juniper = "0.9"
+Measurements = "2.11"
 OrderedCollections = "1.6"
 Reexport = "1"
 StatsBase = "0.34"
+Turing = "0.30"
+XLSX = "0.10"
 julia = "1.9"
