--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,6 @@ Measurements = "2.11"
 OrderedCollections = "1.6"
 Reexport = "1"
 StatsBase = "0.34"
-Turing = "0.30"
+Turing = "0.30, 0.36"
 XLSX = "0.10"
 julia = "1.10"
